<resources>
    <string name="app_name">Unit Converter</string>
    <string name="cups_conversion">Converted Unit:</string>
    <string name="convert">Convert</string>
    <string name="fluid_ounces">Fluid Ounces</string>
    <string name="milliliters">Milliliters</string>
    <string name="tablespoons">Tablespoons</string>
    <string name="what_would_you_like_to_convert_to">What would you like to convert to?</string>
    <string name="cups">Cups</string>
    <string name="unit_converter">Unit Converter</string>
</resources>