<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_converter"
        android:textSize="36dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/cups"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/cups"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/conversion_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cups"
        android:text="@string/what_would_you_like_to_convert_to"
        />
    <RadioGroup
        android:id="@+id/cups_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/tablespoons"
        app:layout_constraintTop_toBottomOf="@+id/conversion_question"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/tablespoons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tablespoons"/>
        <RadioButton
            android:id="@+id/milliliters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milliliters"
            />
        <RadioButton
            android:id="@+id/fluid_ounces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fluid_ounces"/>
    </RadioGroup>
    <Button
        android:id="@+id/calculate_cups"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cups_options"
        android:text="@string/convert"/>
    <TextView
        android:id="@+id/cups_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cups_conversion"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_cups"
        app:layout_constraintEnd_toEndOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>